[gd_scene load_steps=7 format=3 uid="uid://baeot556cdvua"]

[ext_resource type="PackedScene" uid="uid://b0k4gx6o7dos4" path="res://world.tscn" id="1_gh5m8"]
[ext_resource type="Script" path="res://main.gd" id="1_s3me3"]
[ext_resource type="PackedScene" uid="uid://wf2b5h04kake" path="res://player.tscn" id="2_le0id"]
[ext_resource type="PackedScene" uid="uid://d30hoi01aefkv" path="res://fish.tscn" id="3_pcdal"]
[ext_resource type="PackedScene" uid="uid://0dkue3aa8dea" path="res://checkpoint.tscn" id="5_nbdmi"]

[sub_resource type="Curve2D" id="Curve2D_fk1u6"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -576, -320, 0, 0, 0, 0, -576, -328, 0, 0, 0, 0, 576, -320, 0, 0, 0, 0, 576, 320, 0, 0, 0, 0, -576, 320, 0, 0, 0, 0, -576, -320)
}
point_count = 6

[node name="Main" type="Node"]
script = ExtResource("1_s3me3")
fish_scene = ExtResource("3_pcdal")

[node name="World" parent="." instance=ExtResource("1_gh5m8")]

[node name="Player" parent="." instance=ExtResource("2_le0id")]

[node name="Fish" parent="." groups=["fish"] instance=ExtResource("3_pcdal")]
collision_layer = 2
collision_mask = 2

[node name="FishPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_fk1u6")

[node name="FishSpawnLocation" type="PathFollow2D" parent="FishPath"]
position = Vector2(-576, -320)
rotation = -1.5708

[node name="Checkpoint" parent="." instance=ExtResource("5_nbdmi")]
position = Vector2(272, 0)
lock_rotation = true

[connection signal="spawn_mob" from="Player" to="." method="_on_player_spawn_mob"]
[connection signal="body_entered" from="Checkpoint" to="." method="_on_checkpoint_body_entered"]
